<resources>
    <string name="app_name">HealthManager</string>

    <string name="nav_home">Home</string>
    <string name="nav_medicine">Medicine</string>
    <string name="nav_more">More</string>
    <string name="label_search_medicine">Search Medicine</string>
    <string name="label_add_medicine">Add Medicine</string>
    <string name="medicine_hint">Medicine</string>
    <string name="label_medicine">Medicine</string>
    <string name="label_remind">Remind</string>
    <string name="label_times">%s times/day</string>
    <string name="label_take">Take %s pill</string>
    <string name="label_plan">Plan</string>
    <string name="label_begin_date">Begin Date:</string>
    <string name="label_details">Details</string>
    <string name="label_picktime">When do you need to take this dose?</string>
    <string name="label_pickdose">How many do you take?</string>
    <string name="label_inventory">Inventory</string>
    <string name="text_inventory">%s pill(s) left</string>
    <string name="label_inventory_notify">Notify me when</string>
    <string name="text_inventorynotify">%s pill(s) are left</string>
    <string name="title_inventory">Set current inventory</string>
    <string name="title_inventory_left">Notify me when</string>

    <string name="toast_maxiTake">You need to take up to %s pill</string>
    <string name="toast_minTake">You need to take at least %s pill</string>
    <string name="toast_inventoryerror">Cant\'t set quantity be greater than inventory</string>

    <string name="button_done">Done</string>
    <string name="button_set">Set</string>
</resources>