<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.healthmanager.ui.main.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_medicine"
        android:name="com.example.healthmanager.ui.main.medicine.MedicineFragment"
        android:label="@string/nav_medicine"
        tools:layout="@layout/fragment_medicine" />

    <fragment
        android:id="@+id/nav_more"
        android:name="com.example.healthmanager.ui.main.more.MoreFragment"
        android:label="@string/nav_more"
        tools:layout="@layout/fragment_more" />

</navigation>