<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view"
            type="com.example.healthmanager.ui.customremind.CustomRemindFragment" />

        <variable
            name="viewmodel"
            type="com.example.healthmanager.ui.customremind.CustomRemindViewModel" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_picktime"
            style="@style/DialogTextTitle"/>

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:timePickerMode="spinner"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_pickdose"
            style="@style/DialogTextTitle"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_spacing_xs"
            android:layout_marginBottom="@dimen/global_spacing_xs"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/minus"
                android:tint="@color/color_cd_light"
                app:onClick="@{view.onMinusClicked}"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="32dp"
                android:layout_marginStart="@dimen/global_spacing_xxs"
                android:layout_marginEnd="@dimen/global_spacing_xxs"
                android:lines="1"
                android:inputType="number"
                android:focusable="false"
                android:text="@={viewmodel.takingDoseString}"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/plus"
                android:tint="@color/color_cd_light"
                app:onClick="@{view.onPlusClicked}"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/button_set"
            style="@style/TextButton"
            app:onClick="@{view.onSetClicked}"/>

    </LinearLayout>

</layout>