<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view"
            type="com.example.healthmanager.ui.inventory.InventoryFragment" />

        <variable
            name="viewmodel"
            type="com.example.healthmanager.ui.inventory.InventoryViewModel" />

        <import type="android.view.View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/global_spacing_xs"
            android:layout_marginEnd="@dimen/global_spacing_xs"
            android:layout_marginBottom="@dimen/global_spacing_xs"
            android:text="@string/title_inventory"
            android:layout_gravity="center"
            style="@style/CardTextTitle"
            android:visibility="@{view.requestCode == 1031 ? View.VISIBLE : View.GONE}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/global_spacing_xs"
            android:layout_marginEnd="@dimen/global_spacing_xs"
            android:layout_marginBottom="@dimen/global_spacing_xs"
            android:text="@string/title_inventory_left"
            android:layout_gravity="center"
            style="@style/CardTextTitle"
            android:visibility="@{view.requestCode == 1032 ? View.VISIBLE : View.GONE}"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/global_spacing_xs"
            android:layout_marginBottom="@dimen/global_spacing_xs"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/minus"
                android:tint="@color/color_cd_light"
                app:onClick="@{view.onMinusClicked}" />

            <EditText
                android:layout_width="@dimen/global_spacing_l"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/global_spacing_xxs"
                android:layout_marginEnd="@dimen/global_spacing_xxs"
                android:inputType="number"
                android:lines="1"
                android:maxWidth="@dimen/global_spacing_l"
                android:text="@={viewmodel.inventoryString}"
                android:gravity="center" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/plus"
                android:tint="@color/color_cd_light"
                app:onClick="@{view.onPlusClicked}" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/global_spacing_xs"
            android:layout_marginEnd="@dimen/global_spacing_xs"
            android:layout_marginBottom="@dimen/global_spacing_xs"
            android:text="@{@string/text_inventory(viewmodel.inventoryString)}"
            android:layout_gravity="center"
            style="@style/CardText"
            android:visibility="@{view.requestCode == 1031 ? View.VISIBLE : View.GONE}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/global_spacing_xs"
            android:layout_marginEnd="@dimen/global_spacing_xs"
            android:layout_marginBottom="@dimen/global_spacing_xs"
            android:text="@{@string/text_inventorynotify(viewmodel.inventoryString)}"
            android:layout_gravity="center"
            style="@style/CardText"
            android:visibility="@{view.requestCode == 1032 ? View.VISIBLE : View.GONE}"/>

        <Button
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/button_set"
            app:onClick="@{view.onSetClicked}" />

    </LinearLayout>


</layout>