<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.healthmanager.ui.addmedicine.AddMedicineViewModel" />

        <variable
            name="model"
            type="com.example.healthmanager.data.database.entity.Medicine" />

        <import type="android.view.View" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                style="@style/Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/global_spacing_xxs">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/title_medicine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:text="@string/label_medicine"
                        style="@style/CardTextTitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:text="@{model.name}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_medicine"
                        app:transitionVisibility="@{viewmodel.showDetails ? View.VISIBLE : View.GONE}" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/global_spacing_xxs" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/title_remind"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:text="@string/label_remind"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/title_time_of_taking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:text="@{@string/label_times(model.timeOfTaking)}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_remind" />

                    <TextView
                        android:id="@+id/title_takingtime1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:text="@{model.takingTime1}"
                        android:visibility="@{model.takingTime1.length() != 0 ? View.VISIBLE : View.GONE}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_time_of_taking" />

                    <TextView
                        android:id="@+id/title_takingdose1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:text="@{@string/label_take(model.takingDose)}"
                        android:visibility="@{model.takingTime1.length() != 0 ? View.VISIBLE : View.GONE}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_time_of_taking" />

                    <TextView
                        android:id="@+id/title_takingtime2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:text="@{model.takingTime2}"
                        android:visibility="@{model.takingTime2.length() != 0 ? View.VISIBLE : View.GONE}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_takingtime1" />

                    <TextView
                        android:id="@+id/title_takingdose2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:text="@{@string/label_take(model.takingDose)}"
                        android:visibility="@{model.takingTime2.length() != 0 ? View.VISIBLE : View.GONE}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_takingtime1" />

                    <TextView
                        android:id="@+id/title_takingtime3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:text="@{model.takingTime3}"
                        android:visibility="@{model.takingTime3.length() != 0 ? View.VISIBLE : View.GONE}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_takingtime2" />

                    <TextView
                        android:id="@+id/title_takingdose3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:text="@{@string/label_take(model.takingDose)}"
                        android:visibility="@{model.takingTime3.length() != 0 ? View.VISIBLE : View.GONE}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_takingtime2" />

                    <TextView
                        android:id="@+id/title_takingtime4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:text="@{model.takingTime4}"
                        android:visibility="@{model.takingTime4.length() != 0 ? View.VISIBLE : View.GONE}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_takingtime3" />

                    <TextView
                        android:id="@+id/title_takingdose4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:text="@{@string/label_take(model.takingDose)}"
                        android:visibility="@{model.takingTime4.length() != 0 ? View.VISIBLE : View.GONE}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_takingtime3" />

                    <TextView
                        android:id="@+id/title_takingtime5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:text="@{model.takingTime5}"
                        android:visibility="@{model.takingTime5.length() != 0 ? View.VISIBLE : View.GONE}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_takingtime4" />

                    <TextView
                        android:id="@+id/title_takingdose5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:text="@{@string/label_take(model.takingDose)}"
                        android:visibility="@{model.takingTime5.length() != 0 ? View.VISIBLE : View.GONE}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_takingtime4" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/global_spacing_xxs">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/title_plan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:text="@string/label_plan"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:text="@{@string/label_begin_date(model.date)}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_plan" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/global_spacing_xxs">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/transitions_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:src="@drawable/expand_less"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:onClick="@{viewmodel.onArrowClicked}" />

                    <TextView
                        android:id="@+id/title_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:text="@string/label_details"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/global_spacing_xxs"
                        android:text="@{model.details}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_details"
                        app:transitionVisibility="@{viewmodel.showDetails ? View.VISIBLE : View.GONE}" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>